Changelog
=========

This document describes changes between each past release. For information
about future releases, check `milestones`_ and :doc:`/about/vision`.


0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2018-07-27)
----------------

- First release.