@@ -1,4 +1,4 @@
-# Generated by Django 2.0.7 on 2018-07-27 09:36
+# Generated by Django 2.0.7 on 2018-08-01 09:43
 
 from django.db import migrations, models
 import django.db.models.deletion
@@ -52,7 +52,6 @@ class Migration(migrations.Migration):
                 ('full_name', models.CharField(db_index=True, max_length=50, verbose_name='full name')),
                 ('email', models.EmailField(db_index=True, max_length=254, verbose_name='email')),
                 ('current_status', models.CharField(db_index=True, default='NOT_YET_VISIBLE', max_length=50, verbose_name='Internal signer status')),
-                ('adobe_id', models.CharField(db_index=True, default='', max_length=50, verbose_name='Internal adobe id')),
                 ('signature', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='signers', to='adobesign.Signature')),
             ],
             options={
