@@ -59,7 +59,25 @@ class AdobeSignBackend(django_anysign.SignatureBackend):
         # Update signature instance with record_id
         signature.signature_backend_id = result['id']
         signature.save(update_fields=['signature_backend_id'])
+
+        # Update signers instance with external id
+        self.map_adobe_signer_to_signer(signature)
         return signature
+
+    def update_signer_status(self, signer, status):
+        raise NotImplementedError()
+
+    def map_adobe_signer_to_signer(self, signature):
+        # Can raise a Signer.DoesNotExist
+        for adobe_signer in self.get_all_signers(
+                signature.signature_backend_id).get('participantSets', []):
+            # We only have 1 signer by turn
+            email = adobe_signer['memberInfos'][0]['email']
+            signer = signature.signers.get(signing_order=adobe_signer['order'],
+                                           email=email)
+            signer.signature_backend_id = adobe_signer['id']
+            signer.save(update_fields=['signature_backend_id'])
+            self.update_signer_status(signer, adobe_signer['status'])
 
     def get_agreements(self, page_size=20, cursor=None, **extra_params):
         """
